fix spacing in messages

--- a/public/components/forms/forms.css
+++ b/public/components/forms/forms.css
@@ -57,7 +57,7 @@ input:-webkit-autofill:active{
 }
 /* ! -------------------------------- messages -------------------------------- ! */
 .message {
-    margin-top: 12px;
+    margin-top: 9px;
     display: flex;
     align-items: center;
 }
